Updated final model

--- a/Project1_Digit_Classification.ipynb
+++ b/Project1_Digit_Classification.ipynb
@@ -2736,18 +2736,19 @@
    "source": [
     "### Best performing model\n",
     "\n",
-    "The best performing model is realized when the following applications are used:\n",
+    "The best performing model is realized when the following conditions were applied:\n",
     "\n",
     "- 5-Nearest Neighbor Model\n",
+    "- Use of the full training data set\n",
     "- Deskewed data\n",
     "- Guassian blurring of data with radis = 1, sigma = 1.2\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -2755,7 +2756,29 @@
      "output_type": "stream",
      "text": [
       "Deskewing test data...\n",
-      "Deskewing train data...\n"
+      "Deskewing train data...\n",
+      "Blurring train data...\n",
+      "Blurring test data...\n",
+      "Making predictions...\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.99      1.00      0.99       862\n",
+      "           1       0.99      0.99      0.99      1001\n",
+      "           2       0.99      0.98      0.98       885\n",
+      "           3       0.99      0.98      0.98       949\n",
+      "           4       0.99      0.98      0.99       870\n",
+      "           5       0.99      0.98      0.99       785\n",
+      "           6       0.99      0.99      0.99       906\n",
+      "           7       0.97      0.99      0.98       939\n",
+      "           8       0.98      0.98      0.98       908\n",
+      "           9       0.98      0.98      0.98       895\n",
+      "\n",
+      "    accuracy                           0.99      9000\n",
+      "   macro avg       0.99      0.99      0.99      9000\n",
+      "weighted avg       0.99      0.99      0.99      9000\n",
+      "\n",
+      "Precise accuracy: 0.9856666666666667\n"
      ]
     }
    ],
