Updating final CNN model

--- a/Project1_Digit_Classification.ipynb
+++ b/Project1_Digit_Classification.ipynb
@@ -3121,7 +3121,7 @@
     "\n",
     "# Add two different convolutional layers with different number of filters\n",
     "model.add(Conv2D(filters=32, kernel_size=(3, 3), activation='relu', input_shape=(img_rows, img_cols, 1)))\n",
-    "model.add(Conv2D(filters=64, kernel_size=(3, 3), activation='relu'))\n",
+    "model.add(Conv2D(filters=32, kernel_size=(3, 3), activation='relu'))\n",
     "\n",
     "# Create a pooling layer\n",
     "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
@@ -3142,6 +3142,164 @@
     "\n",
     "print('\\nTest accuracy for the convolutional neural network:', score[1])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 17: Improve the CNN\n",
+    "\n",
+    "Improve on the CNN developed in part 17. Make adjustments to the various hyperparameters within the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/50\n",
+      "1200/1200 [==============================] - 64s 53ms/step - loss: 1.0158 - accuracy: 0.7027\n",
+      "Epoch 2/50\n",
+      "1200/1200 [==============================] - 60s 50ms/step - loss: 0.2484 - accuracy: 0.9262\n",
+      "Epoch 3/50\n",
+      "1200/1200 [==============================] - 56s 47ms/step - loss: 0.1880 - accuracy: 0.9436\n",
+      "Epoch 4/50\n",
+      "1200/1200 [==============================] - 56s 47ms/step - loss: 0.1530 - accuracy: 0.9530\n",
+      "Epoch 5/50\n",
+      "1200/1200 [==============================] - 55s 46ms/step - loss: 0.1212 - accuracy: 0.9626\n",
+      "Epoch 6/50\n",
+      "1200/1200 [==============================] - 55s 46ms/step - loss: 0.1040 - accuracy: 0.9693\n",
+      "Epoch 7/50\n",
+      "1200/1200 [==============================] - 56s 46ms/step - loss: 0.0889 - accuracy: 0.9724\n",
+      "Epoch 8/50\n",
+      "1200/1200 [==============================] - 55s 46ms/step - loss: 0.0756 - accuracy: 0.9772\n",
+      "Epoch 9/50\n",
+      "1200/1200 [==============================] - 55s 46ms/step - loss: 0.0646 - accuracy: 0.9810\n",
+      "Epoch 10/50\n",
+      "1200/1200 [==============================] - 54s 45ms/step - loss: 0.0615 - accuracy: 0.9820\n",
+      "Epoch 11/50\n",
+      "1200/1200 [==============================] - 55s 46ms/step - loss: 0.0552 - accuracy: 0.9830\n",
+      "Epoch 12/50\n",
+      "1200/1200 [==============================] - 54s 45ms/step - loss: 0.0482 - accuracy: 0.9856\n",
+      "Epoch 13/50\n",
+      "1200/1200 [==============================] - 55s 46ms/step - loss: 0.0461 - accuracy: 0.9872\n",
+      "Epoch 14/50\n",
+      "1200/1200 [==============================] - 55s 45ms/step - loss: 0.0434 - accuracy: 0.9869\n",
+      "Epoch 15/50\n",
+      "1200/1200 [==============================] - 55s 46ms/step - loss: 0.0391 - accuracy: 0.9878\n",
+      "Epoch 16/50\n",
+      "1200/1200 [==============================] - 55s 46ms/step - loss: 0.0370 - accuracy: 0.9891\n",
+      "Epoch 17/50\n",
+      "1200/1200 [==============================] - 55s 46ms/step - loss: 0.0315 - accuracy: 0.9905\n",
+      "Epoch 18/50\n",
+      "1200/1200 [==============================] - 55s 46ms/step - loss: 0.0328 - accuracy: 0.9896\n",
+      "Epoch 19/50\n",
+      "1200/1200 [==============================] - 55s 46ms/step - loss: 0.0308 - accuracy: 0.9906\n",
+      "Epoch 20/50\n",
+      "1200/1200 [==============================] - 55s 46ms/step - loss: 0.0274 - accuracy: 0.9912\n",
+      "Epoch 21/50\n",
+      "1200/1200 [==============================] - 55s 46ms/step - loss: 0.0271 - accuracy: 0.9922\n",
+      "Epoch 22/50\n",
+      "1200/1200 [==============================] - 55s 46ms/step - loss: 0.0265 - accuracy: 0.9916\n",
+      "Epoch 23/50\n",
+      "1200/1200 [==============================] - 55s 46ms/step - loss: 0.0244 - accuracy: 0.9923\n",
+      "Epoch 24/50\n",
+      "1200/1200 [==============================] - 55s 46ms/step - loss: 0.0219 - accuracy: 0.9937\n",
+      "Epoch 25/50\n",
+      "1200/1200 [==============================] - 54s 45ms/step - loss: 0.0229 - accuracy: 0.9929\n",
+      "Epoch 26/50\n",
+      "1200/1200 [==============================] - 54s 45ms/step - loss: 0.0208 - accuracy: 0.9936\n",
+      "Epoch 27/50\n",
+      "1200/1200 [==============================] - 54s 45ms/step - loss: 0.0187 - accuracy: 0.9942\n",
+      "Epoch 28/50\n",
+      "1200/1200 [==============================] - 55s 46ms/step - loss: 0.0181 - accuracy: 0.9946\n",
+      "Epoch 29/50\n",
+      "1200/1200 [==============================] - 57s 47ms/step - loss: 0.0173 - accuracy: 0.9945\n",
+      "Epoch 30/50\n",
+      "1200/1200 [==============================] - 53s 44ms/step - loss: 0.0158 - accuracy: 0.9951\n",
+      "Epoch 31/50\n",
+      "1200/1200 [==============================] - 54s 45ms/step - loss: 0.0168 - accuracy: 0.9948\n",
+      "Epoch 32/50\n",
+      "1200/1200 [==============================] - 32223s 27s/step - loss: 0.0150 - accuracy: 0.9954\n",
+      "Epoch 33/50\n",
+      "1200/1200 [==============================] - 54s 45ms/step - loss: 0.0141 - accuracy: 0.9958\n",
+      "Epoch 34/50\n",
+      "1200/1200 [==============================] - 54s 45ms/step - loss: 0.0128 - accuracy: 0.9965\n",
+      "Epoch 35/50\n",
+      "1200/1200 [==============================] - 55s 45ms/step - loss: 0.0133 - accuracy: 0.9960\n",
+      "Epoch 36/50\n",
+      "1200/1200 [==============================] - 55s 45ms/step - loss: 0.0139 - accuracy: 0.9963\n",
+      "Epoch 37/50\n",
+      "1200/1200 [==============================] - 55s 46ms/step - loss: 0.0128 - accuracy: 0.9958\n",
+      "Epoch 38/50\n",
+      "1200/1200 [==============================] - 58s 49ms/step - loss: 0.0122 - accuracy: 0.9961\n",
+      "Epoch 39/50\n",
+      "1200/1200 [==============================] - 60s 50ms/step - loss: 0.0097 - accuracy: 0.9973\n",
+      "Epoch 40/50\n",
+      "1200/1200 [==============================] - 58s 48ms/step - loss: 0.0095 - accuracy: 0.9971\n",
+      "Epoch 41/50\n",
+      "1200/1200 [==============================] - 57s 48ms/step - loss: 0.0112 - accuracy: 0.9970\n",
+      "Epoch 42/50\n",
+      "1200/1200 [==============================] - 57s 48ms/step - loss: 0.0097 - accuracy: 0.9971\n",
+      "Epoch 43/50\n",
+      "1200/1200 [==============================] - 58s 48ms/step - loss: 0.0082 - accuracy: 0.9978\n",
+      "Epoch 44/50\n",
+      "1200/1200 [==============================] - 58s 49ms/step - loss: 0.0089 - accuracy: 0.9975\n",
+      "Epoch 45/50\n",
+      "1200/1200 [==============================] - 59s 49ms/step - loss: 0.0075 - accuracy: 0.9979\n",
+      "Epoch 46/50\n",
+      "1200/1200 [==============================] - 60s 50ms/step - loss: 0.0083 - accuracy: 0.9973\n",
+      "Epoch 47/50\n",
+      "1200/1200 [==============================] - 59s 49ms/step - loss: 0.0060 - accuracy: 0.9985\n",
+      "Epoch 48/50\n",
+      "1200/1200 [==============================] - 57s 48ms/step - loss: 0.0070 - accuracy: 0.9979\n",
+      "Epoch 49/50\n",
+      "1200/1200 [==============================] - 60s 50ms/step - loss: 0.0078 - accuracy: 0.9974\n",
+      "Epoch 50/50\n",
+      "1200/1200 [==============================] - 62s 51ms/step - loss: 0.0064 - accuracy: 0.9985\n",
+      "\n",
+      "Test accuracy for the convolutional neural network: 0.9860000014305115\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize the model\n",
+    "model = Sequential() \n",
+    "\n",
+    "# Add two different convolutional layers with different number of filters\n",
+    "model.add(Conv2D(filters=32, kernel_size=(3, 3), activation='relu', input_shape=(img_rows, img_cols, 1)))\n",
+    "model.add(Conv2D(filters=64, kernel_size=(3, 3), activation='relu'))\n",
+    "\n",
+    "# Create a pooling layer\n",
+    "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "\n",
+    "# Add some noise using dropout\n",
+    "model.add(Dropout(0.1))\n",
+    "\n",
+    "# Flatten to create the input for the feed-forward layers\n",
+    "model.add(Flatten())\n",
+    "model.add(Dense(input_dim=128, units=50, activation='relu')) \n",
+    "model.add(Dense(input_dim=50, units=10, activation='softmax')) \n",
+    "\n",
+    "## Cost function & Objective (and solver)\n",
+    "sgd = optimizers.SGD(lr=0.01)\n",
+    "model.compile(optimizer=sgd, loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "history = model.fit(train_data_cnn, train_labels_b, batch_size=50, epochs=50, verbose=1)\n",
+    "score = model.evaluate(test_data_cnn, test_labels_b, verbose=0)\n",
+    "\n",
+    "print('\\nTest accuracy for the convolutional neural network:', score[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
