--- a/Digit_Classification.ipynb
+++ b/Digit_Classification.ipynb
@@ -7,7 +7,7 @@
     "id": "z6UHmLYVhWAN"
    },
    "source": [
-    "# Project 1: Digit Classification with K-Nearest Neighbors, Naive Bayes, Feed-Forward Neural Networks, and Convolutional Neural Networks"
+    "# Digit Classification with K-Nearest Neighbors, Naive Bayes, Feed-Forward Neural Networks, and Convolutional Neural Networks"
    ]
   },
   {
@@ -120,7 +120,7 @@
     "id": "atc2JpWKhWAV"
    },
    "source": [
-    "### Part 1:\n",
+    "### Part 1 - Visualize the data:\n",
     "\n",
     "Show a 10x10 grid that visualizes 10 examples of each digit."
    ]
@@ -252,7 +252,7 @@
     "id": "EMQAHr7QhWAX"
    },
    "source": [
-    "### Part 2:\n",
+    "### Part 2 - Evaluate using KNN:\n",
     "\n",
     "Produce k-Nearest Neighbors models with k $\\in$ [1,3,5,7,9].  Evaluate and show the accuracy of each model. For the 1-Nearest Neighbor model, additionally show the precision, recall, and F1 for each label. Which digit is the most difficult for the 1-Nearest Neighbor model to recognize?"
    ]
@@ -400,7 +400,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create a custom made Nearest Neighbors object using euclidean distance as the distance metric"
+    "### Part 2b - Custom implementation of Nearest Neighbors using Euclidean distance:"
    ]
   },
   {
@@ -640,7 +640,7 @@
     "id": "7b6YEAzzhWAa"
    },
    "source": [
-    "### Part 3:\n",
+    "### Part 3 - Evaluate KNN based on training set size:\n",
     "\n",
     "Produce 1-Nearest Neighbor models using training data of various sizes. Evaluate and show the performance of each model. Additionally, show the time needed to measure the performance of each model."
    ]
@@ -774,7 +774,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Use the custom made Nearest Neighbors object to run predictions on the range of training set sizes"
+    "### Part 3b - Evaluate the custom Nearest Neighbors on varying training set size:\n"
    ]
   },
   {
@@ -947,7 +947,7 @@
     "id": "B56lVsKNhWAc"
    },
    "source": [
-    "### Part 4:\n",
+    "### Part 4 - Linear regression prediction on KNN model performance:\n",
     "\n",
     "Produce a linear regression model that predicts accuracy of a 1-Nearest Neighbor model given training set size. Show $R^2$ of the linear regression model.  Show the accuracies predicted for training set sizes 60000, 120000, and 1000000.  Show a lineplot of actual accuracies and predicted accuracies vs. training set size over the range of training set sizes in the training data."
    ]
@@ -1135,7 +1135,7 @@
     "id": "geAQJjGRhWAe"
    },
    "source": [
-    "### Part 5:\n",
+    "### Part 5 - KNN confusion matrix:\n",
     "\n",
     "Produce a 1-Nearest Neighbor model and show the confusion matrix. Show the images of these most often confused digits."
    ]
@@ -1293,7 +1293,7 @@
     "id": "tgqMKb-hhWAh"
    },
    "source": [
-    "### Part 6:\n",
+    "### Part 6 - Guassian blurring:\n",
     "\n",
     "A common image processing technique is to smooth an image by blurring. The idea is that the value of a particular pixel is estimated as the weighted combination of the original value and the values around it. Typically, the blurring is Gaussian, i.e., the weight of a pixel's influence is determined by a Gaussian function over the distance to the relevant pixel.\n",
     "\n",
@@ -1599,7 +1599,7 @@
     "id": "LtgepWfAhWAk"
    },
    "source": [
-    "### Part 7:\n",
+    "### Part 7 - Evaluate Naive Bayes models:\n",
     "\n",
     "Produce two Naive Bayes models and evaluate their performances.\n",
     "\n",
@@ -1741,7 +1741,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Third Multinomial model"
+    "### Part 7b - A third Multinomial model:"
    ]
   },
   {
@@ -1869,7 +1869,7 @@
     "id": "PqjbRLg7hWAm"
    },
    "source": [
-    "### Part 8:\n",
+    "### Part 8 - LaPlace smoothing:\n",
     "\n",
     "Search across several values of the LaPlace smoothing parameter (alpha) to find its effect on a Bernoulli Naive Bayes model's performance.  Show the accuracy at each alpha value."
    ]
@@ -2016,7 +2016,7 @@
     "id": "B07GDiDdhWAq"
    },
    "source": [
-    "### Part 9:\n",
+    "### Part 9 - Evaluate a Gaussian Naive Bayes model:\n",
     "\n",
     "Produce a model using Guassian Naive Bayes, which is intended for real-valued features, and evaluate performance. "
    ]
@@ -2219,7 +2219,7 @@
     "id": "dgZMuc1VhWAt"
    },
    "source": [
-    "### Part 10:\n",
+    "### Part 10 - Generate noisy data using NB:\n",
     "\n",
     "Because Naive Bayes produces a generative model, it can be used to generate digit images.\n",
     "\n",
@@ -2331,7 +2331,7 @@
     "id": "ksHMg73uhWAx"
    },
    "source": [
-    "### Part 11: \n",
+    "### Part 11 - Analyze the calibration of the NB model: \n",
     "\n",
     "Produce a Bernoulli Naive Bayes model.  Evaluate performance: partition the dev set into several buckets based on the posterior probabilities of the predicted classes and then estimate the accuracy for each bucket.  Show the accuracy for each bucket, and evaluate the overall calibration of the model."
    ]
@@ -3147,7 +3147,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Part 17: Improve the CNN\n",
+    "### Part 17: Best performing deep learning model\n",
     "\n",
     "Improve on the CNN developed in part 17. Make adjustments to the various hyperparameters within the model"
    ]
@@ -3293,13 +3293,6 @@
     "\n",
     "print('\\nTest accuracy for the convolutional neural network:', score[1])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
